# agentrl

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  IMPLEMENTATION_PLAN.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  container.yml  package.yml
examples/: local-hermes-agent-os.md
src/agentrl/: __init__.py  agent_harness.py  cli.py  harness.py  local_agent_os.py  models.py  project.py  registry.py
src/agentrl/adapters/: __init__.py  openharness.py  repo2rlenv.py
src/agentrl/harnesses/: __init__.py  coding.py  rag.py  tool_use.py
tests/: test_cli.py  test_openharness_adapter.py  test_project.py  test_reinforcement.py  test_repo2rlenv_adapter.py  test_self_retro.py  test_targeted_agent_harness.py
