[project]
name = "agentrl-os"
version = "0.1.0"
description = "Local-first Harness Operating System for defining, evaluating, evolving, versioning, and deploying agent harnesses."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "AgentRL Contributors" }]
maintainers = [{ name = "Junaid Ahmed" }]
keywords = [
  "agents",
  "agentic-ai",
  "ai-agents",
  "harness",
  "evaluation",
  "rl",
  "local-first",
  "repo2rlenv",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Systems Administration",
  "Typing :: Typed",
]
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
dev = [
  "build>=1.2.0",
  "pytest>=8.0",
  "twine>=5.0",
]

[project.urls]
Homepage = "https://github.com/junaidahmed361/agentrl"
Repository = "https://github.com/junaidahmed361/agentrl"
Issues = "https://github.com/junaidahmed361/agentrl/issues"
Documentation = "https://github.com/junaidahmed361/agentrl#readme"

[project.scripts]
agentrl = "agentrl.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
  "/README.md",
  "/LICENSE",
  "/ARCHITECTURE.md",
  "/IMPLEMENTATION_PLAN.md",
  "/assets",
  "/examples",
  "/src",
  "/tests",
  "/pyproject.toml",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agentrl"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
